updating css and html files.  mostly topnav stuff

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="topnav">
-    <a class="active" href="index.html">Home</a>
-    <a href="profile.html">Profile</a>
-    <a href="reflection.html">Reflection</a>
-    <a href="showcase.html">Showcases/Achivements</a>
-    <a href="qualifications.html">Qualifications</a>
-    <a href="contact.html">Contact</a>
+    <div class="wrapper">
+    <div class="topnav">
+        <a class="active" href="index.html">Home</a>
+        <a href="profile.html">Profile</a>
+        <a href="reflection.html">Reflection</a>
+        <a href="showcase.html">Showcases/Achivements</a>
+        <a href="qualifications.html">Qualifications</a>
+        <a href="contact.html">Contact</a>
+    </div>
+<div class="box" style="grid-column:1 / span 3; font-size:25px;">Welcome to my webpage for CIS 545 - Project #1</div>
 </div>
-<div>-</div>
 </body>
 </html>
