--- a/reflection.html
+++ b/reflection.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a href="profile.html">Profile</a>
+        <a class="active" href="reflection.html">Reflection</a>
+        <a href="showcase.html">Showcases/Achivements</a>
+        <a href="qualifications.html">Qualifications</a>
+        <a href="contact.html">Contact</a>
+    </div>
+    </div>  
 </body>
 </html>
