updating CSS, adding content to index and profile

--- a/profile.html
+++ b/profile.html
@@ -8,14 +8,37 @@
 </head>
 <body>
     <div class="wrapper">
-    <div class="topnav">
-        <a href="index.html">Home</a>
-        <a class="active" href="profile.html">Profile</a>
-        <a href="reflection.html">Reflection</a>
-        <a href="showcase.html">Showcases/Achivements</a>
-        <a href="qualifications.html">Qualifications</a>
-        <a href="contact.html">Contact</a>
-    </div>
+        <div class="topnav">
+            <a href="index.html">Home</a>
+            <a class="active" href="profile.html">Profile</a>
+            <a href="reflection.html">Reflection</a>
+            <a href="showcase.html">Showcases/Achivements</a>
+            <a href="qualifications.html">Qualifications</a>
+            <a href="contact.html">Contact</a>
+        </div>
+
+        <div class="fullbox" style="font-size:25px;">My Profile</div>
+        <div class="qbox">Full Name</div>
+        <div class="abox">John D Steffen III</div>
+
+        <div class="qbox">Student Number</div>
+        <div class="abox">226380</div>
+
+        <div class="qbox">Email Address</div>
+        <div class="abox">jdsteffen@fsmail.bradley.edu</div>
+
+        <div class="qbox">Level</div>
+        <div class="abox">Graduate</div>
+
+        <div class="qbox">Major</div>
+        <div class="abox">CIS with a concentration in Data Science</div>
+
+        <div class="qbox">Age</div>
+        <div class="abox">42</div>
+
+        <div class="qbox">Hobbies</div>
+        <div class="abox">Cars, Racing, Woodworking, Board Games, Video Games</div>
+
     </div>
 </body>
 </html>
