--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <div class="wrapper">
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
@@ -16,7 +17,10 @@
         <a href="qualifications.html">Qualifications</a>
         <a href="contact.html">Contact</a>
     </div>
-<div class="box" style="grid-column:1 / span 3; font-size:25px;">Welcome to my webpage for CIS 545 - Project #1</div>
+
+    <div class="fullbox" style="font-size:25px;">Welcome to my webpage for CIS 545 - Project #1</div>
+    <div class="fullbox" style="line-height: 2">On this website you will find information about me, and what I have learned through my undergraduate degree, my work experience, and so far in my graduate studies.</div>
+    
 </div>
 </body>
 </html>
