updating css, adding content to profile, reflection, and showcase html

--- a/profile.html
+++ b/profile.html
@@ -38,7 +38,9 @@
 
         <div class="qbox">Hobbies</div>
         <div class="abox">Cars, Racing, Woodworking, Board Games, Video Games</div>
-
+        
+        <div class="qbox">Photo</div>
+        <div class="abox"><img src="profile_pic.jpg" width="20%"></div>
     </div>
 </body>
 </html>
