--- a/reflection.html
+++ b/reflection.html
@@ -16,6 +16,32 @@
         <a href="qualifications.html">Qualifications</a>
         <a href="contact.html">Contact</a>
     </div>
+    <div class="fullbox" style="font-size:25px;">Reflection</div>
+    <div class="qbox" style="grid-row-start:3;grid-row-end:5">Early Life</div>
+    <div class="abox">Growing up in the 1980s, before the computer revolution was quite different than it is today.  My earliest memories of computers is the Commodore 64 we had when I was very young.  We could program it to display graphics, or play a few games, like Centipede, but it didn't have much else.</div>
+    <div class="abox">In Junior High, I took a computer basics class, a keyboarding class and a programming class.  We used Apple IIe computers.  In the computer basics class, we played Oregon Trail.  I had my first glimpse of computer programming with BASIC.  I remember using the Graphics functionality to show the wick on a stick of dynamite slowing burning and the dynamite exploding.  The keyboarding class didn't help me, unfortunately, and I didn't learn to type until much later.</div>
+
+    <div class="qbox">High School</div>
+    <div class="abox">While I was in high school, the internet started to become more accessible.  We finally got a Windows computer (Windows 95) and had a 56k dial-up modem.  I used it mostly to chat online and find new music that interested me.  Social interactions at the time were limited to chat rooms and email lists.  I shared early MP3s via FTP.  It would take 20-30 minutes to upload or download a single song.</div>
+
+    <div class="qbox" style="grid-row-start:6;grid-row-end:8">Junior College (ICC)</div>
+    <div class="abox">My first forray out of high school was studying Mass Communications / Radio & Television Broadcasting at Illinois Central College.</div>
+    <div class="abox">My dream at the time was to become a sound engineer and eventually a music producer.  After I completed my associates degree, I went to work at a local radio station and a local television station.  However, I realized after about a year that those careers weren't for me.</div>
+
+    <div class="qbox" style="grid-row-start:8;grid-row-end:10">Bachelor's Degree Studies (UIS)</div>
+    <div class="abox">After the events of 9/11, I decided that it was time to make a career change.  The radio and television stations were paying barely over minimum wage.  I took a self-inventory, and realized that I really enjoyed working with computers.  The next step was to finish my Undergraduate degree, and I decide on Computer Science.</div>
+    <div class="abox">I was accepted into the Computer Science program at The University of Illinois in Springfield.  It is a nice, small campus, state school, though not dissimilar to Bradley with small class sizes and a more intimate atmosphere.  I went in not really knowing a whole lot about programming, and while I learned a whole lot about computers in my time there, I didn't leave knowing a whole lot about programming either.</div>
+
+    <div class="qbox" style="grid-row-start:10;grid-row-end:16">Professional Career</div>
+    <div class="abox">Out of school, with my Bachelor's degree in-hand, I got my first real job.  A now-defunct company called MultiAd.  I worked there as a Developer/Analyst at first, and worked my way up to Senior Developer/Analyst in my 7 years at the company.  At MultiAd, I built the back-end programming for websites that built print, and later web banner, advertisements.  Users could upload text and graphics, place them in the ad, and export it.</div>
+    <div class="abox">I met my wife at MultiAd.  Around the time we were starting to think about having children, MultiAd started to become unstable.  There were many rounds of layoffs.  We both started looking for other jobs, as it didn't seem having both of our salaries (and insurance) tied to a single company was a good idea.</div>
+    <div class="abox">That brings me to Bradley University.  I started at Bradley in September 2011.  I came on as a Programmer/Analyst in what is now Enterprise Services.  The thing that set me apart from the other candidates in the search was my passion for data.</div>
+    <div class="abox">In my first two years at Bradley, I took over most of the Student Records reporting.  That included our <a href="https://www.bradley.edu/offices/academic/registrar/statistical-profile/">Statistical Profile</a>, and our federally regulated <a href="https://nces.ed.gov/ipeds">IPEDS</a> reporting.</div>
+    <div class="abox">About 5 years ago, an initiative was made to create an <a href="https://www.bradley.edu/offices/academic/institutionaleffectiveness/">Office of Institional Effectiveness</a>.  It's similar to an Office of Institional Research, but with more autonomy.  The department was created under the Associate Provost.</div>
+    <div class="abox">My role now is much as it was under Enterprise Services, but I have additional reporting responsibilities.  I still create the Statitical Profile, and generate data for the Office of the Registrar to upload to IPEDS.  In addition, I send data to the National Student Clearinghouse, generate the data used for our surveys (including USNews), and send data to the Illinois Board of Higher Education.</div>
+
+    <div class="qbox">Graduate School (Bradley)</div>
+    <div class="abox">When I heard about the Data Science program being offered at Bradley, I knew I wanted to pursue it.  COVID and a bit of uncertainty led me to delay.  In the spring of 2022, I finally started my application, right around the time they unlisted the program.  Not to be deterred, I changed direction and applied for CIS instead.  I realized that the Intelligent Systems concentration was nearly the same as the Masters of Data Science program.  Then, they added a Data Science concentration to the CIS program, so I hopped over to that, and I'm exactly where I want to be!</div>
     </div>  
 </body>
 </html>
