--- a/showcase.html
+++ b/showcase.html
@@ -16,6 +16,17 @@
         <a href="qualifications.html">Qualifications</a>
         <a href="contact.html">Contact</a>
     </div>
+    <div class="fullbox" style="font-size:25px;">Showcase</div>
+    <div class="qbox" style="grid-row-start:3;grid-row-end:6">Work</div>
+    <div class="abox">I've been involved in a number of interesting projects since coming to Bradley in 2011.</div>
+    <div class="abox">The Statistical Profile is a yearly report on our students.  Inside you will find data about major and minor enrollment, completions, and demographic data on our student population.  The Statistical Profile can be found on the <a href="https://www.bradley.edu/offices/academic/registrar/statistical-profile/">Registrar's webpage</a>.  I am responsible for Section A.</div>
+    <div class="abox"><img src="statistical_profile.png" height="600"><img src="powerbi_completion.png" height="600"><img src="data_definitions.png" height="600"></div>
+    <div class="qbox" style="grid-row-start:6;grid-row-end:8">Family</div>
+    <div class="abox"></div>
+    <div class="abox"></div>
+    <div class="qbox" style="grid-row-start:8;grid-row-end:10">Fun</div>
+    <div class="abox"></div>
+    <div class="abox"></div>
     </div>
 </body>
 </html>
