adding images, updating css, qualifications.html, contact.html

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,30 @@
         <a href="qualifications.html">Qualifications</a>
         <a class="active" href="contact.html">Contact</a>
     </div>
+    <div class="fullbox" style="font-size:25px;">Contact</div>
+    <div class="qbox">Email</div>
+    <div class="abox"><a href="mailto:jdsteffen@fsmail.bradley.edu">jdsteffen@fsmail.bradley.edu</a></div>
+
+    <div class="qbox">Bradley Page</div>
+    <div class="abox"><a href="https://www.bradley.edu/offices/academic/institutionaleffectiveness/staff/profile.dot?id=4019a425-ed0e-4ad6-9deb-8fa98f4d7403" target="_blank">Institutional Effectiveness Analyst</a></div>
+
+    <div class="qbox">Office</div>
+    <div class="abox">Swords Hall - Room 14</div>
+
+    <div class="qbox">Phone</div>
+    <div class="abox">(309) 677-2954</div>
+
+    <div class="qbox">LinkedIn</div>
+    <div class="abox"><a href="https://www.linkedin.com/in/jsteffen80/" target="_blank">jsteffen80</a></div>
+    
+    <div class="qbox">Instagram (personal)</div>
+    <div class="abox"><a href="http://instagram.com/ghogfy" target="_blank">@ghogfy</a></div>
+
+    <div class="qbox">The Good Book</div>
+    <div class="abox"><a href="https://www.facebook.com/jsteffen80" target="_blank">jsteffen80</a></div>
+
+    
+
     </div>
 </body>
 </html>
