--- a/reflection.html
+++ b/reflection.html
@@ -21,7 +21,7 @@
     <div class="abox">Growing up in the 1980s, before the computer revolution was quite different than it is today.  My earliest memories of computers is the Commodore 64 we had when I was very young.  We could program it to display graphics, or play a few games, like Centipede, but it didn't have much else.</div>
     <div class="abox">In Junior High, I took a computer basics class, a keyboarding class and a programming class.  We used Apple IIe computers.  In the computer basics class, we played Oregon Trail.  I had my first glimpse of computer programming with BASIC.  I remember using the Graphics functionality to show the wick on a stick of dynamite slowing burning and the dynamite exploding.  The keyboarding class didn't help me, unfortunately, and I didn't learn to type until much later.</div>
 
-    <div class="qbox">High School</div>
+    <div class="qbox" style="grid-row-start:5;grid-row-end:6">High School</div>
     <div class="abox">While I was in high school, the internet started to become more accessible.  We finally got a Windows computer (Windows 95) and had a 56k dial-up modem.  I used it mostly to chat online and find new music that interested me.  Social interactions at the time were limited to chat rooms and email lists.  I shared early MP3s via FTP.  It would take 20-30 minutes to upload or download a single song.</div>
 
     <div class="qbox" style="grid-row-start:6;grid-row-end:8">Junior College (ICC)</div>
