fixing problems in css and reflection.html

--- a/reflection.html
+++ b/reflection.html
@@ -25,7 +25,7 @@
     <div class="abox">While I was in high school, the internet started to become more accessible.  We finally got a Windows computer (Windows 95) and had a 56k dial-up modem.  I used it mostly to chat online and find new music that interested me.  Social interactions at the time were limited to chat rooms and email lists.  I shared early MP3s via FTP.  It would take 20-30 minutes to upload or download a single song.</div>
 
     <div class="qbox" style="grid-row-start:6;grid-row-end:8">Junior College (ICC)</div>
-    <div class="abox">My first forray out of high school was studying Mass Communications / Radio & Television Broadcasting at Illinois Central College.</div>
+    <div class="abox">My first forray out of high school was studying Mass Communications / Radio and Television Broadcasting at Illinois Central College.</div>
     <div class="abox">My dream at the time was to become a sound engineer and eventually a music producer.  After I completed my associates degree, I went to work at a local radio station and a local television station.  However, I realized after about a year that those careers weren't for me.</div>
 
     <div class="qbox" style="grid-row-start:8;grid-row-end:10">Bachelor's Degree Studies (UIS)</div>
