adding cars.html with logic for showing a random car

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
         <a href="showcase.html">Showcases/Achivements</a>
         <a href="qualifications.html">Qualifications</a>
         <a class="active" href="contact.html">Contact</a>
+        <a href="cars.html">Random Car</a>
     </div>
     <div class="fullbox" style="font-size:25px;">Contact</div>
     <div class="qbox">Email</div>
