--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="showcase.html">Showcases/Achivements</a>
         <a href="qualifications.html">Qualifications</a>
         <a href="contact.html">Contact</a>
+        <a href="cars.html">Random Car</a>
     </div>
 
     <div class="fullbox" style="font-size:25px;">Welcome to my webpage for CIS 545 - Project #1</div>
