--- a/reflection.html
+++ b/reflection.html
@@ -15,6 +15,7 @@
         <a href="showcase.html">Showcases/Achivements</a>
         <a href="qualifications.html">Qualifications</a>
         <a href="contact.html">Contact</a>
+        <a href="cars.html">Random Car</a>
     </div>
     <div class="fullbox" style="font-size:25px;">Reflection</div>
     <div class="qbox" style="grid-row-start:3;grid-row-end:5">Early Life</div>
