--- a/qualifications.html
+++ b/qualifications.html
@@ -15,6 +15,7 @@
         <a href="showcase.html">Showcases/Achivements</a>
         <a class="active" href="qualifications.html">Qualifications</a>
         <a href="contact.html">Contact</a>
+        <a href="cars.html">Random Car</a>
     </div>
 
     <div class="fullbox" style="font-size:20px;background-color: #304142;">Education</div>
