--- a/showcase.html
+++ b/showcase.html
@@ -15,6 +15,7 @@
         <a class="active" href="showcase.html">Showcases/Achivements</a>
         <a href="qualifications.html">Qualifications</a>
         <a href="contact.html">Contact</a>
+        <a href="cars.html">Random Car</a>
     </div>
     <div class="fullbox" style="font-size:25px;">Showcase</div>
     <div class="qbox" style="grid-row-start:3;grid-row-end:5">Family</div>
