adding target=_blank to cars link

--- a/cars.html
+++ b/cars.html
@@ -108,7 +108,7 @@
             document.getElementById("yearsbox").innerHTML=carArray[randomnum].years;
             document.getElementById("infobox").innerHTML=carArray[randomnum].info;
             document.getElementById("picturebox").innerHTML='<img src=cars/' + carArray[randomnum].picture + '>';
-            document.getElementById("sourcebox").innerHTML='<a href=' + carArray[randomnum].source + '>' + carArray[randomnum].sourceName + '</a>';
+            document.getElementById("sourcebox").innerHTML='<a href=' + carArray[randomnum].source + ' target="_blank">' + carArray[randomnum].sourceName + '</a>';
         }
     </script>
 </head>
