--- a/profile.html
+++ b/profile.html
@@ -41,7 +41,7 @@
         <div class="abox">Cars, Racing, Woodworking, Board Games, Video Games</div>
         
         <div class="qbox">Photo</div>
-        <div class="abox"><img src="profile_pic.jpg" width="20%"></div>
+        <div class="abox"><img src="images/profile_pic.jpg" width="20%"></div>
     </div>
 </body>
 </html>
